--- a/menu/css/estilos.css
+++ b/menu/css/estilos.css
@@ -2,3 +2,53 @@
 
 /* ------ ESTILOS GENERALES ----*/
 
+body {
+	font-family: 'Fira Sans', sans-serif;
+	background-color: rgba(0, 0, 0, .10);
+	font-size: 16px;
+} 
+
+h1, h2, h3, h4, h5, h6 {
+	font-family: 'Kablammo', cursive;
+	color: #772F1A;
+	text-align: center;
+}
+h1 {
+	font-size: 3em;
+}
+h2 {
+	font-size: 2em;
+	background-color: #ffc14d;
+	padding-top: 6px;
+	padding-bottom: 6px;
+}
+.principal {
+	padding-left: 0;
+	padding-right: 0;
+}
+.contenidos {
+	padding-top: 30px;
+	padding-bottom: 30px;
+}
+
+
+/* ------- Navegación -----*/
+.navegacion {
+	background-color: #ffc14d !important;
+}
+/* ----- Tablas ------*/
+.tabla-menu {
+	--bs-table-bg: transparent;
+}
+.tabla-menu h3 {
+	text-align: left;
+}
+
+
+/* ----- Cards ----*/
+.card {
+	margin-bottom: 20px;
+	background-color: #fff6d3;
+
+}
+
